# memory-leak-minimal-reproduce

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: App.jsx  index.css
src/wasm/: lib.rs  partial_load_cursor.rs
