[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/lib.rs"

[dependencies]
byteorder = "1.1"
wasm-bindgen = "0.2"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "FileReader",
    "HtmlInputElement",
    "ProgressEvent",
    "Window",
    "console",
    "Document",
    "DomException",
    "FileList",
    "File",
    "Blob",
] }
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"
